<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <data>
        <variable
            name="viewModel"
            type="com.example.vkvideoloader.ui.welcome.WelcomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:text="@string/welcome_to_vkvideoloader_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:background="@android:color/white"
            android:onClick="@{() -> viewModel.logIn()}"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginRequestTextView" />

        <TextView
            android:id="@+id/LoginRequestTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/you_have_to_login_with_your_vk_account"
            app:layout_constraintEnd_toEndOf="@+id/welcomeTextView"
            app:layout_constraintStart_toStartOf="@+id/welcomeTextView"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>